--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,49 @@ dependencies {
             "com.intuit.karate:karate-netty:0.9.2",
             "com.intuit.karate:karate-apache:0.9.6",
             "net.masterthought:cucumber-reporting:5.8.1",
-            'junit:junit:4.13.2'
+            'junit:junit:4.13.2',
+            'net.minidev:json-smart:2.5.2'
+}
+
+compileJava.dependsOn(clean)
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
+
+tasks.register('karateDebug', JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    main = 'com.intuit.karate.cli.Main'
+}
+
+sourceSets {
+    test {
+        java {
+            srcDir file('src/test/java')
+            exclude '**/*UiRunner*.java'
+        }
+        resources {
+            srcDir file('src/test/java')
+            exclude '**/*.java'
+        }
+    }
 }
 
 test {
-    useJUnitPlatform()
+    include '**/*TestRunner*'
+    systemProperties System.getProperties()
+    systemProperty "file.encoding", "utf-8"
+    // pull karate options into the runtime
+    systemProperty "karate.options", System.properties.getProperty("karate.options")
+    // pull karate env into the runtime
+    systemProperty "karate.env", System.properties.getProperty("karate.env")
+    // ensure tests are always run
+    outputs.upToDateWhen { false }
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+        showStandardStreams = true}
 }
+
+gradle.startParameter.continueOnFailure = true
